--- a/site/Boots/public/css/estilo.css
+++ b/site/Boots/public/css/estilo.css
@@ -3,6 +3,9 @@ hr.style1{
     margin-left: 30%;
     margin-right: 30%;
 }
+.img-circle {
+  border-radius: 5000%;
+  }
 hr.style2{
   border-top: 10px double #000;
   margin-left: 30%;
