--- a/site/Boots/public/css/estilo.css
+++ b/site/Boots/public/css/estilo.css
@@ -12,6 +12,20 @@ hr.style1{
   top: 20px;
 }
 
+.bg-gradient-primary2 {
+  
+  background: rgba(164,179,87,1);
+  background: -moz-linear-gradient(top, rgba(164,179,87,1) 0%, rgba(164,179,87,1) 32%, rgba(117,137,12,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(164,179,87,1)), color-stop(32%, rgba(164,179,87,1)), color-stop(100%, rgba(117,137,12,1)));
+  background: -webkit-linear-gradient(top, rgba(164,179,87,1) 0%, rgba(164,179,87,1) 32%, rgba(117,137,12,1) 100%);
+  background: -o-linear-gradient(top, rgba(164,179,87,1) 0%, rgba(164,179,87,1) 32%, rgba(117,137,12,1) 100%);
+  background: -ms-linear-gradient(top, rgba(164,179,87,1) 0%, rgba(164,179,87,1) 32%, rgba(117,137,12,1) 100%);
+  background: linear-gradient(to bottom, rgba(164,179,87,1) 0%, rgba(164,179,87,1) 32%, rgba(117,137,12,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c', GradientType=0 );
+  
+
+}
+
 .img-circle {
   border-radius: 5000%;
   }
